--- a/src/css/jquery.orgchart.css
+++ b/src/css/jquery.orgchart.css
@@ -223,7 +223,7 @@
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-  background-color: rgba(217, 83, 79, 0.8);
+  background-color: darkred;
   color: #fff;
   border-radius: 4px 4px 0 0; 
 }
